--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@
 
 # IDEA
 /.idea/
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
