--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=ufg8b4hxpe4413io9l85bzq1jd7izhb2
+APP_SECRET=8ino5241afb8xlbeocwts6mgsutg25b1
 #http://www.unit-conversion.info/texttools/random-string-generator/
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
@@ -25,7 +25,7 @@ APP_SECRET=ufg8b4hxpe4413io9l85bzq1jd7izhb2
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@127.0.0.1:3306/
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/DeWerkplek
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
