--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/intl": "4.3.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer-pack": "*",
@@ -31,17 +32,17 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
-        "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
         "friendsofsymfony/user-bundle": "~2.1",
         "symfony/console": "4.3.*",
+        "symfony/debug-pack": "*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/maker-bundle": "^1.0",
         "symfony/orm-pack": "^1.0",
+        "symfony/profiler-pack": "*",
         "symfony/swiftmailer-bundle": "^3.3",
+        "symfony/test-pack": "*",
         "symfony/translation": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.3.*"
